--- a/Mod4Act1.html
+++ b/Mod4Act1.html
@@ -133,17 +133,17 @@
 
                     <div class="form-item">
                         <label for="birthDate">Birth Date:</label>
-                        <input type="text" id="birthDate" placeholder="YYY/MM/DD" required><br>
+                        <input type="date" id="birthDate" required><br>
                     </div>
 
                     <div class="form-item">
                         <label for="admitDate">Admit Date:</label>
-                        <input type="text" id="admitDate" placeholder="YYY/MM/DD" required><br>
+                        <input type="date" id="admitDate" required><br>
                     </div>
                     
                     <div class="form-item">
                         <label for="dischargeDate">Discharge Date:</label>
-                        <input type="text" id="dischargeDate" placeholder="YYY/MM/DD" required><br>
+                        <input type="date" id="dischargeDate" required><br>
                     </div>
 
                     <h2>Doctor Information</h2>
@@ -180,7 +180,7 @@
                         <input type="number" id="roomCharge" required><br>
                     </div>
 
-                    <button type="button" onclick="generateBill()">Generate Bill</button>
+                    <button type="submit" onclick="generateBill()">Generate Bill</button>
             </form>
 
         </div>
