--- a/Mod4Act1.html
+++ b/Mod4Act1.html
@@ -180,7 +180,7 @@
                         <input type="number" id="roomCharge" required><br>
                     </div>
 
-                    <button type="submit" onclick="generateBill()">Generate Bill</button>
+                    <button type="button" onclick="generateBill()">Generate Bill</button>
             </form>
 
         </div>
