polish, lacks date validation

--- a/Mod4Act1.html
+++ b/Mod4Act1.html
@@ -118,7 +118,7 @@
 
                     <div class="form-item">
                         <label for="patientId">Patient ID:</label>
-                        <input type="number" id="patientId" placeholder="number is required" required><br>
+                        <input type="number" id="patientId" required><br>
                     </div>
 
                     <div class="form-item">
@@ -133,17 +133,17 @@
 
                     <div class="form-item">
                         <label for="birthDate">Birth Date:</label>
-                        <input type="text" id="birthDate" placeholder="YYY/MM/DD" required><br>
+                        <input type="date" id="birthDate" required><br>
                     </div>
 
                     <div class="form-item">
                         <label for="admitDate">Admit Date:</label>
-                        <input type="text" id="admitDate" placeholder="YYY/MM/DD" required><br>
+                        <input type="date" id="admitDate" required><br>
                     </div>
                     
                     <div class="form-item">
                         <label for="dischargeDate">Discharge Date:</label>
-                        <input type="text" id="dischargeDate" placeholder="YYY/MM/DD" required><br>
+                        <input type="date" id="dischargeDate" required><br>
                     </div>
 
                     <h2>Doctor Information</h2>
